// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`display throw error if second argument is non-string when used: expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "display(31072020, 0xDEADC0DE);",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "Line 1: TypeError: display expects the second argument to be a string",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;

exports[`display with no arguments throws an error: expectParsedError 1`] = `
Object {
  "alertResult": Array [],
  "code": "display();",
  "displayResult": Array [],
  "numErrors": 1,
  "parsedErrors": "Line 1: Expected 1 or more arguments, but got 0.",
  "result": undefined,
  "resultStatus": "error",
  "visualiseListResult": Array [],
}
`;
